fix modal z-index

--- a/public/styles/hackdash/addon/index.less
+++ b/public/styles/hackdash/addon/index.less
@@ -114,6 +114,9 @@ a.anchor {
 .carousel-indicators li {
   border-color: #999;
 }
+.modal-dialog {
+  z-index: 10000;
+}
 
 @import 'animation';
 @import 'navbar';
